# scupt-raft

./: .gitignore  Cargo.toml  README.md  test.dockerfile
data/: .gitattributes  MC_1n.tla  MC_3n.tla  raft_action.db  raft_trace.json  raft_trace_1n.db
doc/: coverage.md
docker/: Dockerfile
fuzz/: Cargo.toml  readme.md
fuzz/fuzz_targets/: fuzz_quorum_agree_match_index.rs  fuzz_quorum_agree_vote.rs  fuzz_quorum_check_conf_term_version.rs  fuzz_quorum_check_term_commit_index.rs  fuzz_storage.rs
fuzz/src/: fuzz_gen_test_json.rs  lib.rs
script/: split_sqlite.py
spec/: raft.tla  raft_common.tla
spec/model_check/Model_1n/: MC.cfg  MC.tla
spec/model_check/Model_2n/: MC.cfg  MC.tla
src/: conf_node.rs  conf_value.rs  conf_version.rs  lib.rs  log_entry.rs  msg_dtm_testing.rs  msg_raft_state.rs  node.rs  node_addr.rs  node_info.rs  non_volatile_write.rs  quorum.rs  raft_conf.rs  raft_message.rs  raft_node.rs  raft_role.rs  snapshot.rs  state.rs  state_machine.rs  state_machine_inner.rs  state_non_volatile.rs  state_volatile.rs  storage.rs  store_async.rs  store_sync.rs  term_index.rs  test_action_input.rs  test_action_read.rs  test_check_invariants.rs  test_config.rs  test_data.rs  test_dtm.rs  test_message.rs  test_path.rs  test_quorum.rs  test_raft_1n.rs  test_raft_2n.rs  test_raft_3n.rs  test_raft_5n.rs  test_raft_dtm.rs  (+4 more)
