[package]
name = "scupt-raft"
version = "0.0.1"
edition = "2021"

[features]
_FUZZ_GEN_TEST_JSON_ = []

[dependencies]
scupt-util = { git = "https://github.com/scuptio/scupt-util.git" }
scupt-net = { git = "https://github.com/scuptio/scupt-net.git" }
sedeve-kit = { git = "https://github.com/scuptio/sedeve-kit.git" }
tracing = "0.1.36"
rand = "0.8.5"
scc = { version = "2.0.4" }
async_fn_traits = "0.1.1"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
async-trait = "0.1.73"
bincode = "2.0.0-rc.3"
serde = "1.0.151"
serde_json = { version = "1.0.107", features = ["std", "arbitrary_precision", "preserve_order"] }
project-root = "0.2.2"
rusqlite = "0.30.0"
once_cell = "1.18.0"
uuid = { version = "1.5.0", features = ["v4"] }
lazy_static = "1.4.0"
rayon = { version = "1.8.0" }
num_cpus = "1.0"
chrono = "0.4.31"
rand_distr = "0.4.3"
walkdir = "2.4.0"
regex = "1.10.2"
arbitrary = { version = "1.3.2", features = ["derive"] }
md5 = "0.7.0"
log = "0.4.21"